Финальные правки деталей